# project5

./: .gitignore  README.md  pin.txt
NFClassLibrary1/: Class1.cs  NFClassLibrary1.nfproj  packages.config
PCB/: PCB_Project.PrjPcb  Schlib1.SchLib  Sheet1.SchDoc  Sheet2.SchDoc  Sheet3.SchDoc  Sheet4.SchDoc  Sheet5.SchDoc
Src/: CMakeLists.txt  platformio.ini  sdkconfig
Src/src/: CMakeLists.txt  DataSave.c  DataSave.h  HC138.c  HC138.h  HC595.c  HC595.h  Start.c  TaskShow.c  TaskShow.h  TaskUart.c  TaskUart.h  Uart.c  Uart.h  main.cpp  pin.h
Src/src/74HC138/: HC138.cpp  HC138.h
Src/src/74HC595/: HC595.cpp  HC595.h
Src/src/W25Q64/: FLASH.h  W25Q64.cpp  W25Q64.h
Up/: Up.sln
Up/App1/App1/: App1.csproj  IoTApp.csproj  (+1 more)
Up/App1/App1.Android/: App1.Android.csproj  IoTApp.Android.csproj  MainActivity.cs
Up/IoTMcu/: ConfigObj.cs  ConfigRead.cs  DownloadFile.cs  ErrorRun.cs  FONT.cs  FontSave.cs  HC138.cs  HC595.cs  IoTMcu.csproj  IoTMcuMain.cs  Logs.cs  PackDown.cs  ShowSave.cs  SocketIoT.cs  UartUtils.cs
Up/IoTMcuEdit/: App.xaml  App.xaml.cs  Converter.cs  DownloadFile.cs  GenShow.cs  IoTMcuEdit.csproj  LcdObj.cs  MainWindow.xaml  MainWindow.xaml.cs  PackUp.cs  ShowObj.cs  SocketUtils.cs
Up/Lib/: IoTPackObj.cs  Lib.projitems  Lib.shproj  Objs.cs  SocketObject.cs  SocketPack.cs
Up/McuEdit/: App.xaml  App.xaml.cs  IoTMcuEdit.csproj  MainWindow.xaml  MainWindow.xaml.cs  McuEdit.csproj  packages.config
nanoFramework/: ErrorRun.cs  FLASH.cs  FONT.cs  FileSystem.cs  HC138.cs  HC595.cs  NFApp1.nfproj  NFApp1.sln  Program.cs  font.cs  packages.config
(+21 files in other folders)
