idf_component_register(SRCS "Start.c"
                            "HC138.c"
                            "HC595.c"
                            "TaskShow.c"
                            "TaskUart.c"
                            "Uart.c"
                            "DataSave.c"
                            INCLUDE_DIRS ".")